feat: add career manager dashboard and render deployment blueprint